--- a/views/tables/minorLeaguers.jade
+++ b/views/tables/minorLeaguers.jade
@@ -17,7 +17,20 @@ mixin minorLeaguers(players, team, config, displayConfig, isTrade)
 				th Team
 				th AB
 				th IP
-				th.small(style="width:21%") MLB Status
+				th.small MLB Status
+				th.extra Level
+				th.extra AB
+				th.extra HR
+				th.extra R
+				th.extra RBI
+				th.extra SB
+				th.extra OBP
+				th.extra W
+				th.extra K
+				th.extra WHIP
+				th.extra ERA
+				th.extra SV
+				th.extra IP
 
 		tbody
 			-each player in players['minor_leaguers']
