--- a/views/team.jade
+++ b/views/team.jade
@@ -252,7 +252,8 @@ block content
 
 	section(id="right" style="width:42%")
 		div.widget
-			h2 Minor Leaguers
+			p(style="margin-top:8px;")
+				span(style="font-size:1.5em;font-weight:bold") Minor Leaguers
 			mixin minorLeaguers(players, team, config, displayConfig)
 			p
 				i.smallNote * Vulture Threshhold: 150 AB / 50 IP
