--- a/views/tables/minorLeaguers.jade
+++ b/views/tables/minorLeaguers.jade
@@ -15,8 +15,8 @@ mixin minorLeaguers(players, team, config, displayConfig, isTrade)
 			th(style="text-align:left") Name
 			-if(!isTrade)
 				th Team
-				th AB
-				th IP
+				th.default AB
+				th.default IP
 				th.small MLB Status
 				th.extra Level
 				th.extra AB
