--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,7 +1,11 @@
 body {
 	background: #313145;
 	color: white;
-	font: 16px "Dosis", sans-serif; 
+	#font: 16px "Dosis", sans-serif; 
+	font-size: 15px;
+	font-family: "Lato";
+	font-weight: 100;
+	font-style: normal;
 	margin: 0px;
 	min-height: 100%;
 }
@@ -30,17 +34,16 @@ div.header ul li a {
 	padding: 3px 3px;
 	color: white;
 	text-decoration: none;
-	font-weight: bold;
 	text-align: center;
 	display: block;
+	font-weight: 300;
 }
 div.header ul li a:hover {
 	#background: #deff90;
 	#color: #485e0f;
 	background : white;
 	color : #313145;
-	font: 22px;
-	font-weight: bold;
+	font-weight: 300;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
@@ -135,9 +138,14 @@ table.hoverable tbody tr:nth-child(odd):hover {
 }
 table {
 	border-collapse: collapse;
+
+}
+table tr {
+	line-height: 22px;
 }
 th {
 	border-bottom: 1px solid white;
+	font-weight: 300;
 }
 tbody {
 	padding-top:10px;
@@ -147,7 +155,7 @@ th.position {
 	text-align: left;
 }
 th.small {
-	font-size:15px;
+	font-size:14px;
 }
 th.playerName {
 	text-align: left;
@@ -264,6 +272,10 @@ tr.tradeRow td {
 
 .widget h2 {
 	margin-top: 8px;
+	font-weight: 300;
+}
+.widget h3 {
+	font-weight: 300;
 }
 
 table.stats td {
