--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html
 		link(rel='stylesheet', href='/public/css/master.css')
 		link(rel='icon' href='/public/homerFavicon.ico')
 		link(href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css')
+		link(href="http://fonts.googleapis.com/css?family=Lato:100italic,100,300italic,300,400italic,400,700italic,700,900italic,900" rel="stylesheet" type="text/css")
+
 
 		block scripts
 			script(type='text/javascript', src='http://code.jquery.com/jquery-latest.min.js')
