--- a/views/partials/playerStatByDate.jade
+++ b/views/partials/playerStatByDate.jade
@@ -41,7 +41,7 @@ div(style="max-height:200px;overflow-y:scroll;")
 			-each d in teamByDateArray
 				tr
 					td
-						div(style="width:10%;text-align:center;display:inline-block")= moment(d.date).format('l')
+						div(style="width:10%;text-align:center;display:inline-block")= moment(d.date).format('MMMM D')
 						div(style="width:20%;text-align:center;display:inline-block")
 							mixin teamLink(teamHash[d.team], true)
 						div(style="width:10%;display:inline-block")= d.fantasy_status_code
