--- a/views/team.jade
+++ b/views/team.jade
@@ -125,7 +125,8 @@ block inlineScripts
 		function expandMinors() {
 			$('#teamWidget').toggle('fade', { complete : function() {
 					$('#left').animate({width:'0%'}); $('#right').animate({width:'100%'}, { complete : function() {
-							$('.extra').toggle('fade');
+							$('#minorLeaguersWidget .default').hide();
+							$('#minorLeaguersWidget .extra').toggle('fade');
 						}
 					});	
 				}
@@ -133,20 +134,28 @@ block inlineScripts
 			$('#financesWidget').toggle('fade'); 
 			$('#draftPicksWidget').toggle('fade'); 
 			
-			
 			$('#minorsContract').show();
 			$('#minorsExpand').hide();
 		}
 
 		function contractMinors() {
-			$('#right').animate({width:'42%'}); $('#left').animate({width:'58%'}, { complete : function() { 
-					$('#teamWidget').toggle('fade'); 
+			$('#minorLeaguersWidget .extra').toggle('fade').promise().done(function(x) {
+				$('#minorLeaguersWidget .default').show();
+
+			$('#right').animate({width:'42%'});
+				$('#left').animate({width:'58%'}, { queue : false, complete : function() {
+					$('#teamWidget').toggle('fade');
 					$('#financesWidget').toggle('fade');
 					$('#draftPicksWidget').toggle('fade'); 
-				}
+				}});
 			});
 			
-			$('.extra').toggle('fade');
+			//$('#right').animate({width:'42%'}); $('#left').animate({width:'58%'}, { complete : function() { 
+			//		$('#teamWidget').toggle('fade'); 
+			//		$('#financesWidget').toggle('fade');
+			//		$('#draftPicksWidget').toggle('fade'); 
+			//	}
+			//});
 
 			$('#minorsContract').hide();
 			$('#minorsExpand').show();
@@ -208,7 +217,7 @@ block inlineScripts
 			}
 
 			$('#minorsContract').hide();
-			$('.extra').hide();
+			$('#minorLeaguersWidget .extra').hide();
 
 			getExtraMinorLeagueInfo();
 		});
@@ -271,70 +280,71 @@ block content
 				i
 					span.unselectable Previous Rosters: 
 					a.hiddenLink(style="padding-left:15px" href="/team/" + team.teamId + "/2013") 2013
+	div(style="position:relative")
+		div#left(style="width:58%;display:inline-block;vertical-align:top;position:absolute")
+			-var nextYear = parseInt(config.year) + 1
+			-var displayConfig = {};
 
-	div#left(style="width:58%;display:inline-block;vertical-align:top")
-		-var nextYear = parseInt(config.year) + 1
-		-var displayConfig = {};
+			-displayConfig.showKeeperColumns = config.isKeeperPeriod;
+			-displayConfig.showFutureSalary = config.isKeeperPeriod;
+			-displayConfig.showStatus = !config.isKeeperPeriod && !config.isOffseason;
+			-displayConfig.showDemoteButton = false;
 
-		-displayConfig.showKeeperColumns = config.isKeeperPeriod;
-		-displayConfig.showFutureSalary = config.isKeeperPeriod;
-		-displayConfig.showStatus = !config.isKeeperPeriod && !config.isOffseason;
-		-displayConfig.showDemoteButton = false;
+			div(style="width:100%")
+				div.widget#teamWidget
+					-if(config.isKeeperPeriod && config.isTeamOwner)
+						h3= "Select your keepers from " + config.year + " roster"
+						p#draftBudget(style="display:inline;font-size:20px;margin-right:40px")=nextYear + ' Draft Budget: ' + draftCash.value
+						
+						-if(config.isTeamOwner)
+							input.saveChanges(style="line-height:50%" type="button" value="Save Keeper Selections" onclick="saveChanges('" + team.teamId + "')")
 
-		div(style="width:100%")
-			div.widget#teamWidget
-				-if(config.isKeeperPeriod && config.isTeamOwner)
-					h3= "Select your keepers from " + config.year + " roster"
-					p#draftBudget(style="display:inline;font-size:20px;margin-right:40px")=nextYear + ' Draft Budget: ' + draftCash.value
-					
-					-if(config.isTeamOwner)
-						input.saveChanges(style="line-height:50%" type="button" value="Save Keeper Selections" onclick="saveChanges('" + team.teamId + "')")
+					p(style="margin-top:8px;")
+						span(style="font-size:1.5em;font-weight:300") Active Roster
+						a.showButton#showInfoButton(onclick="showInfo()" style="padding-left:20px;cursor:pointer;display:inline") Player Info
+						span.unselectable(style="padding-left:20px") |
+						a.showButton#showStatsButton(onclick="showStats()" style="padding-left:20px;cursor:pointer") Season Stats
+						span.unselectable(style="padding-left:20px") |
+						a.showButton#showDailyStatsButton(onclick="showDailyStats()" style="padding-left:20px;cursor:pointer") Today's Stats
+						span.unselectable(style="padding-left:20px") |
+						a.showButton#showActiveStatsButton(onclick="showActiveStats()" style="padding-left:20px;cursor:pointer") Active Stats
+					-if(!config.isKeeperPeriod || config.isTeamOwner)
+						div.team
+							mixin activeRoster(players, config, displayConfig)
+						div.seasonStatsTable
+							mixin seasonStats(players)
+						div.dailyStats(style="display:none")
+						div.activeStats(style="display:none")
+					-else
+						p= "Check back after the keeper deadline for " + nextYear + " roster"
 
-				p(style="margin-top:8px;")
-					span(style="font-size:1.5em;font-weight:bold") Active Roster
-					a.showButton#showInfoButton(onclick="showInfo()" style="padding-left:20px;cursor:pointer;display:inline") Player Info
-					span.unselectable(style="padding-left:20px") |
-					a.showButton#showStatsButton(onclick="showStats()" style="padding-left:20px;cursor:pointer") Season Stats
-					span.unselectable(style="padding-left:20px") |
-					a.showButton#showDailyStatsButton(onclick="showDailyStats()" style="padding-left:20px;cursor:pointer") Today's Stats
-					span.unselectable(style="padding-left:20px") |
-					a.showButton#showActiveStatsButton(onclick="showActiveStats()" style="padding-left:20px;cursor:pointer") Active Stats
-				-if(!config.isKeeperPeriod || config.isTeamOwner)
-					div.team
-						mixin activeRoster(players, config, displayConfig)
-					div.seasonStatsTable
-						mixin seasonStats(players)
-					div.dailyStats(style="display:none")
-					div.activeStats(style="display:none")
-				-else
-					p= "Check back after the keeper deadline for " + nextYear + " roster"
+			-if((in_vultures && in_vultures.length > 0) || (out_vultures && out_vultures.length > 0))
+				div.widget
+					h2 Vultures
+					mixin vulture(in_vultures, "Vultures on " + team.fullName + "'s Players", true)
+					mixin vulture(out_vultures, "Vultures made by " + team.fullName, false)
 
-		-if((in_vultures && in_vultures.length > 0) || (out_vultures && out_vultures.length > 0))
-			div.widget
-				h2 Vultures
-				mixin vulture(in_vultures, "Vultures on " + team.fullName + "'s Players", true)
-				mixin vulture(out_vultures, "Vultures made by " + team.fullName, false)
+		div#right(style="width:42%;display:inline-block;vertical-align:top;position:absolute;right:0")
+			div(style="width:100%")
+				div.widget#minorLeaguersWidget
+					p(style="margin-top:8px;")
+						span(style="font-size:1.5em;font-weight:300;") Minor Leaguers
+						span#minorsExpand(style="padding-left:20px;cursor:pointer;" onclick="expandMinors()") More...
+						span#minorsContract(style="padding-left:20px;cursor:pointer;" onclick="contractMinors()") Less...
+					mixin minorLeaguers(players, team, config, displayConfig)
+					p
+						i.smallNote * Vulture Threshhold: 150 AB / 50 IP
 
-	div#right(style="width:42%;display:inline-block;vertical-align:top")
-		div(style="width:100%")
-			div.widget#minorLeaguersWidget
-				p(style="margin-top:8px;")
-					span(style="font-size:1.5em;font-weight:bold;") Minor Leaguers
-					span#minorsExpand(style="padding-left:20px;cursor:pointer;" onclick="expandMinors()") More...
-					span#minorsContract(style="padding-left:20px;cursor:pointer;" onclick="contractMinors()") Less...
-				mixin minorLeaguers(players, team, config, displayConfig)
-				p
-					i.smallNote * Vulture Threshhold: 150 AB / 50 IP
+			div(style="width:50%;display:inline-block;vertical-align:top")
+				div.widget#financesWidget
+					p(style="margin-top:8px;")
+						span(style="font-size:1.5em;font-weight:300;") Finances
+					mixin cash(team, cash, config)
+			div(style="width:50%;display:inline-block;vertical-align:top")
+				div.widget#draftPicksWidget
+					h2 Minor League Draft Picks
+					mixin draftPicks(team, picks, teamHash)
 
-		div(style="width:50%;display:inline-block;vertical-align:top")
-			div.widget#financesWidget
-				h2 Finances
-				mixin cash(team, cash, config)
-		div(style="width:50%;display:inline-block;vertical-align:top")
-			div.widget#draftPicksWidget
-				h2 Minor League Draft Picks
-				mixin draftPicks(team, picks, teamHash)
-
-	| <script type="text/javascript" >
-	| var team = !{JSON.stringify(team)};
-	| </script>
+		| <script type="text/javascript" >
+		| var team = !{JSON.stringify(team)};
+		| </script>
