fixing the way minor leaguers are classified

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -475,3 +475,11 @@ td.right {
 td.center {
 	text-align: center;
 }
+
+.linkButton {
+	background:none;
+	border:none;
+	padding:0;
+	font:inherit;
+	cursor:pointer;
+}
