--- a/views/players/minorLeaguer.jade
+++ b/views/players/minorLeaguer.jade
@@ -2,6 +2,8 @@ mixin minorLeaguer(player, isTrade)
 	include ../columns/vulture
 
 	tr(class="player" _id=player._id)
+		td.extra
+			a.hiddenLink(style="cursor:pointer" onclick="expandMinorLeaguer(this, '" + player._id + "')") +
 		td(style="padding-left:8px")
 			= player.position_txt
 		td
@@ -38,4 +40,19 @@ mixin minorLeaguer(player, isTrade)
 			td.extra.stat_sv
 			td.extra.stat_ip
 			mixin vulture(player, {})
+	tr.extraRow(id="ml_actions_" + player._id style="display:none")
+		td 
+		td
+		td
+		td(colspan="2") Actions:
+		td(colspan="2")
+			input.linkButton(style="color:red"
+				type="submit" value="Drop" _id=player._id player_name=player.name_display_first_last
+				onclick="dropMinorLeaguer(this)")
+		td(colspan="5")
+			form(action="/player/do/" + player._id method="POST" onsubmit="return confirm('This move cannot be undone, proceed?')")
+				input(type="hidden" name="action" value="PROMOTE_TO_ACTIVE")
+				input(type="hidden" name="returnUrl" value="/team/" + team.teamId)
+				input.linkButton(style="color:green" type="submit" value="Promote to Majors")
+	tr(style="display:none")
 		
