--- a/views/tables/minorLeaguers.jade
+++ b/views/tables/minorLeaguers.jade
@@ -11,6 +11,7 @@ mixin minorLeaguers(players, team, config, displayConfig, isTrade)
 		ondrop="dropOutOfTrade(event)"
 		)
 		thead
+			th.extra
 			th(style="width:30px") Position
 			th(style="text-align:left") Name
 			-if(!isTrade)
