--- a/views/team.jade
+++ b/views/team.jade
@@ -336,8 +336,8 @@ block content
 						a.showButton#showDailyStatsButton(onclick="showDailyStats()" style="padding-left:20px;cursor:pointer") Today's Stats
 						span.unselectable(style="padding-left:20px") |
 						a.showButton#showActiveStatsButton(onclick="showActiveStats()" style="padding-left:20px;cursor:pointer") Active Stats
-						//span.unselectable(style="padding-left:20px") |
-						//a.showButton#showRosterMovesButton(onclick="showRosterMoves()" style="padding-left:20px;cursor:pointer") Roster Moves
+						span.unselectable(style="padding-left:20px") |
+						a.showButton#showRosterMovesButton(onclick="showRosterMoves()" style="padding-left:20px;cursor:pointer") Roster Moves
 					-if(!config.isKeeperPeriod || config.isTeamOwner)
 						div.team
 							mixin activeRoster(players, config, displayConfig)
@@ -345,8 +345,8 @@ block content
 							mixin seasonStats(players)
 						div.dailyStats(style="display:none")
 						div.activeStats(style="display:none")
-						//div.rosterMoves(style="display:none")
-						//	mixin rosterMoves(players)
+						div.rosterMoves(style="display:none")
+							mixin rosterMoves(players, user && user.team == team.teamId)
 
 					-else
 						p= "Check back after the keeper deadline for " + nextYear + " roster"
