--- a/views/tables/rosterMoves.jade
+++ b/views/tables/rosterMoves.jade
@@ -7,6 +7,7 @@ mixin player_rosterMoves(player, positionText, isTeamOwner)
 			td
 				form(action="/player/do?id=" + player._id method="POST" onsubmit="return confirm('You are about to send " + player.name_display_first_last + " to the minor leagues. Proceed?')")
 					input(type="hidden" name="action" value="DEMOTE_TO_MINORS")
+					input(type="hidden" name="teamId" value=team.teamId)
 					input(type="hidden" name="returnUrl" value="/team/" + team.teamId)
 					input.linkButton(style="color:red;font-size:12px" type="submit" value="Demote To Minors")
 			-if(false)
