turning draft off

--- a/views/draft.jade
+++ b/views/draft.jade
@@ -118,7 +118,7 @@ block content
 						h3= "Currently on the clock: " + teamHash[current_pick.team].fullName
 						p= "Deadline: " + moment(current_pick.deadline).calendar()
 				-else
-					h2 The Draft Begins on June 12th
+					h2 The online portion of the draft has ended.
 
 				-if(user != null)
 					-var numPicksUntilUserPick = 0;
