--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
 
 		block scripts
 			script(type='text/javascript', src='http://code.jquery.com/jquery-latest.min.js')
-			//script(type='text/javascript', src='http://code.highcharts.com/highcharts.js')
+			script(type='text/javascript', src='http://code.highcharts.com/highcharts.js')
 			script(type='text/javascript', src="http://code.jquery.com/ui/1.10.4/jquery-ui.js")
 			script(type='text/javascript', src="/public/jquery.tablesorter.js")
 			script(type='text/javascript', src="/public/moment.min.js")
